<resources>
    <string name="app_name">Grocy Delivery</string>
    <string name="app_name_grocy">Grocy</string>
    <string name="delivery_partner">delivery partner</string>
    <string name="welcome_deliver_goods_online">Deliver goods online</string>
    <string name="welcome_login">Login</string>
    <string name="welcome_signup">Signup</string>
    <string name="login_register"><u>Register</u></string>
    <string name="register_not">Don\'t have an account ?</string>
    <string name="login_otp_line">A six digit OTP will be sent via SMS to verify your phone number!</string>
    <string name="login_et_number_hint">Phone Number</string>
    <string name="login_enter_phone">Enter your phone number!</string>
    <string name="login_send_otp">Send OTP</string>
    <string name="regLoginText"><u>Login</u></string>
    <string name="register_already">Already have an account?</string>
    <string name="register_btn_next">Next</string>
    <string name="progress_loading">Loading…</string>
    <string name="register_sign_up">Sign up</string>
    <string name="otp_head">OTP</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp_code_not">Didn\'t get code yet ?</string>
    <string name="otp_verification">OTP Verification!</string>
    <string name="enter_otp_sent_to">Enter OTP sent to</string>
    <string name="required_docs_head">Requirements</string>
    <string name="required_docs"><u> Required docs </u></string>
    <string name="other_things_required"><u>Other things required</u></string>
    <string name="eligibility_criteria"><u>Eligibility criteria</u></string>
    <string name="required_eligibility">1. You should be high school passed.\n\n2. Your age must be above 18 years.\n\n3. You must have basic knowledge of android smartphone.</string>
    <string name="required_documents">1. Aadhar card (ID proof)\n\n2. PAN card\n\n3. Driving license\n\n4. Vehicle RC\n\n5. Account details (Passbook)\n\n6. Cancelled cheque\n\n7.High school marksheet.</string>
    <string name="required_other">1. Own vehicle (Bike/Scooter/Cycle).\n\n2. Android phone with internet.</string>
    <string name="required_agree">Agree</string>
    <string name="upload_documents_head">Upload Documents</string>
    <string name="upload_aadhar">Aadhar card</string>
    <string name="aadhar_front">Front</string>
    <string name="aadhar_back">Back</string>
    <string name="upload_high_school_marksheet">High school marksheet</string>
    <string name="upload_cancelled_cheque">Cancelled cheque</string>
    <string name="upload_passbook_first_page">Passbook first page</string>
    <string name="upload_vehicle_rc">Vehicle RC</string>
    <string name="upload_driving_license">Driving license</string>
    <string name="upload_pan_card">Pan card</string>
    <string name="upload_submit">Submit</string>
    <string name="upload_toolbar">Upload docs</string>
    <string name="under_review_docs">Under Review</string>
    <string name="under_review_submitted">Your documents are submitted.</string>
    <string name="under_review_reject">We checked your documents.</string>
    <string name="under_review_wait">Please wait until your documents are not verified.\n\nOur executive will contact you soon.</string>
    <string name="under_browse_all_faqs">Browse all FAQs</string>
    <string name="under_incentives_rules">Incentives rules</string>
    <string name="under_contact_us">Contact us</string>
    <string name="under_review_cancel">Sorry! Your application is rejected.</string>
    <string name="under_review_accept">Hurray! Your application is accepted.</string>
    <string name="city_not_available">City Status</string>
    <string name="city_availability">Sorry! we are not available  in your city!!</string>
    <string name="stay_tuned">Stay tuned !</string>
    <string name="faqs">FAQs</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_get_in_touch">Get in touch</string>
    <string name="contact_hint">Please fill out the below form and we will be in touch as soon as possible.</string>
    <string name="contact_your_name">Your name</string>
    <string name="contact_your_email">Your email</string>
    <string name="contact_your_message">Your message</string>
    <string name="contact_send_message">Send message</string>
    <string name="contact_connect_with_us">Connect with us :</string>
    <string name="contact_phone">Phone</string>
    <string name="contact_numbers">8760000123,\n6463361100</string>
    <string name="contact_email">Email</string>
    <string name="contact_email_us">grocyofficial@gmail.com</string>
    <string name="contact_address">Address</string>
    <string name="contact_address_us">123 City mall,New Delhi</string>
    <string name="delivery">Delivery</string>
    <string name="notifications">Notifications</string>
    <string name="support">Support</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="delivery_history">Delivery history</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="rate_us">Rate us</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="nav_header_hello">Hello!</string>
    <string name="nav_header_unknown">Unknown</string>
    <string name="dialog_amazing">Amazing</string>
    <string name="dialog_give_rating">Give Rating</string>
    <string name="dialog_no_thanks">No Thanks</string>
    <string name="rating">We are glad to hear that you love Grocy delivery app.\nWould you like to share your experience by rating us on play store?</string>
    <string name="dialog_feedback_head">Send us your feedback!</string>
    <string name="dialog_test">test@gmail.com</string>
    <string name="feedback_dialog_et">Describe your experience here…</string>
    <string name="feedback_dialog_send_feedback">Send Feedback</string>
    <string name="suggestion">Do you have a suggestion or face some issues?\nLet us know in the field below.</string>
    <string name="about_us_head">About Us</string>
    <string name="about_different">What makes Grocy different?</string>
    <string name="about_team">Our awesome team</string>
    <string name="about_contact_us">Contact Us</string>
    <string name="about_our_social_handles">Our social handles</string>
    <string name="about_us">We are the one for your all kind of daily needs like groceries, vegetables, medicines, stationary etc at your doorstep by your chosen shop within an hour.\n\nBasically, in our app all your nearby shops are shown and you can view and order the items from the shops and it will be deliver within an hour to your doorstep.</string>
    <string name="mission">Our mission is to provide solution to your every possible daily needs and other goods at your door step safely.</string>
    <string name="vision">To be India\'s most recognized platform in order to fulfill every kind of daily needs and other goods.</string>
    <string name="values">Customer Commitment\nTeamwork\nRespect for People\nFast is better than slow</string>
    <string name="differ">A smooth and friendly users experience that has been built to ensures the user seamless adoption.\nWe deliver all type of goods at your doorstep from your favourite store within an hour.\nFluidity and full integration cover the needs of even the most complex companies.</string>
    <string name="about_our_vision">Our Vision</string>
    <string name="about_designation">Designation</string>
    <string name="profile_header">Profile</string>
    <string name="profile_verified">Verified</string>
    <string name="profile_today_s_points">Today\'s Points:</string>
    <string name="profile_count">0</string>
    <string name="profile_monthly_points">Monthly Points:</string>
    <string name="profile_monthly_count">0</string>
    <string name="profile_total_reviews">Total reviews</string>
    <string name="profile_review_count">0</string>
    <string name="profile_del_count">0</string>
    <string name="profile_total_deliveries">Total deliveries</string>
    <string name="profile_accept_delivery">Accept delivery</string>
    <string name="profile_account_setting">Account setting</string>
    <string name="profile_reviews">Reviews</string>
    <string name="profile_log_out">Log out</string>
    <string name="profile_app_version">Grocy delivery partner app (1.0.0)</string>
    <string name="support_header">Help and Support</string>
    <string name="support_popular_solutions">Popular solutions</string>
    <string name="support_incentives_rules">Incentives rules</string>
    <string name="support_need_more_help">Need more help?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop_store_name">Store name</string>
    <string name="shop_store_address">Store address</string>
    <string name="delivery_pick_from"><u>Pick from</u></string>
    <string name="del_id">ID :</string>
    <string name="del_id_no">266343774</string>
    <string name="del_time">12:08 PM</string>
    <string name="del_under_packaging">Under packaging</string>
    <string name="del_delivery_to">Delivery to</string>
    <string name="del_mark_as_order_picked">Mark as order picked</string>
    <string name="reject_warning">Warning</string>
    <string name="reject_warning_message">Are you sure you want to reject this order request.</string>
    <string name="reject_confirm">Confirm</string>
    <string name="reject_cancel">Cancel</string>
    <string name="open_source_libraries_head">Open Source Libraries</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="theme">Theme</string>
    <string name="settings">Settings</string>
    <string name="delivery_amount">Delivery amount</string>
    <string name="distance_payout">Distance payout</string>
    <string name="daily_incentives_head">Daily incentives</string>
    <string name="monthly_incentives_head">Monthly incentives</string>
    <string name="bullets">
        <li> You have to do work minimum of 6 hours daily.</li>\n
        <li> Do not cancel any delivery order for any reason.</li>
    </string>
    <string name="monthly_incentives">
        <li> You must have minimum login time of 200+ hrs in a month.</li>\n
        <li> It is essential to complete 220 deliveries in a month.</li>
    </string>
    <string name="del_amount">You will get 2 points for each delivery one for the order pickup and one for the order drop.\nFor each order you will get minimum 40 rupees(20 for pickup and 20 for drop).</string>
    <string name="eligibility"><u>Eligibility rules</u></string>
    <string name="daily_incentives">If you earn 18 points in a day then you will earn Rs.180 as daily incentives.\nIf you earn 30 points in a day then you will earn Rs.300 as daily incentives.\nIf you earn 44 points in a day then you will earn Rs.440 as daily incentives.\nIf you earn 60 points in a day then you will earn Rs.600 as daily incentives.</string>
    <string name="monthly_last">If you fulfill the above criteria then you will get Rs.1000 in a month.</string>
    <string name="distance_pay">If the distance exceeds 5.5km from store and customer, then you will get some additional pay.\n\nIf distance is between 5.5km - 6.5km you will get Rs.10 extra and if distance is between 6.5km to 7.5km then you will get Rs.20 extra and if distance is above than 7.5km then you will get Rs.30 extra.</string>
    <string name="doc_confirm_message">Please ensure that you have all the required documents before go to the next page.</string>
    <string name="doc_quality">And also make sure that quality of upload documents is good.</string>
</resources>