<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:elevation="0dp">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/incentives_rules_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/dark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/loc_text_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginEnd="100dp"
                    android:fontFamily="@font/baloo"
                    android:gravity="center_horizontal"
                    android:text="@string/support_incentives_rules"
                    android:textColor="@color/textColor"
                    android:textSize="22sp" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="52dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/baloo"
                android:text="@string/delivery_amount"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="22dp"
                android:text="@string/del_amount"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/baloo"
                android:text="@string/distance_payout"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="22dp"
                android:text="@string/distance_pay"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/baloo"
                android:text="@string/daily_incentives_head"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/josefin_sans"
                android:text="@string/eligibility"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="22dp"
                android:text="@string/bullets"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="22dp"
                android:text="@string/daily_incentives"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/baloo"
                android:text="@string/monthly_incentives_head"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/josefin_sans"
                android:text="@string/eligibility"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="22dp"
                android:text="@string/monthly_incentives"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="18dp"
                android:text="@string/monthly_last"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>