<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/linear_back"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="18dp"
            android:src="@drawable/ic_baseline_close_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:text="@string/dialog_feedback_head"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/suggestion"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_test"
        android:textColor="@color/textColor" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_feedback"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:ems="1"
        android:hint="@string/feedback_dialog_et"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFeed"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:padding="14dp"
        android:text="@string/feedback_dialog_send_feedback"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>