<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:paddingBottom="40dp">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="4dp"
        android:scaleType="fitCenter"
        android:src="@drawable/rate"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/josefin_sans"
        android:gravity="center"
        android:text="@string/dialog_amazing"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/rating"
        android:textColor="@color/textColor"
        android:textSize="12sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRatingPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:padding="14dp"
        android:text="@string/dialog_give_rating"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="8dp" />

    <TextView
        android:id="@+id/textNoThanks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/josefin_sans"
        android:gravity="center"
        android:text="@string/dialog_no_thanks"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />
</LinearLayout>