<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/doc_confirm_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/josefin_sans"
        android:gravity="center_horizontal"
        android:text="@string/reject_confirm"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/ic_baseline_close_blue_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_reason_reject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="24dp"
        android:text="@string/doc_confirm_message"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/doc_confirm_head" />

    <TextView
        android:id="@+id/text_doc_quality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="32dp"
        android:text="@string/doc_quality"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_reason_reject" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_doc_quality">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_req_agree"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="34dp"
            android:layout_weight="1"
            android:fontFamily="@font/josefin_sans"
            android:text="@string/required_agree"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="6dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_req_cancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="34dp"
            android:layout_weight="1"
            android:fontFamily="@font/josefin_sans"
            android:text="@string/reject_cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            app:cornerRadius="6dp"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>